# Calcula

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  PHILOSOPHY.md  README.md  ai_changes.txt  apply_multipatch.py  claude.md  run_patch.bat  save_state.bat  update_headers.js
app/: editor.html  (+17 more)
app/src-tauri/: Cargo.toml  Cargo.toml.tmp.192552.8d3c261f05b0  build.rs  fix-test-manifest.ps1  tauri.conf.json
app/src-tauri/capabilities/: chart-spec-editor.json  default.json  model-editor.json  object-script-editor.json  script-editor.json
app/src-tauri/src/: ai_chat.rs  animation_commands.rs  api_types.rs  autofilter.rs  calculation.rs  calp_commands.rs  calp_registry.rs  cell_behaviors.rs  cell_types.rs  chart_commands.rs  commands.rs  comments.rs  computed_properties.rs  conditional_formatting.rs  consolidate.rs  control_values.rs  controls.rs  data_tables.rs  data_validation.rs  distribution.rs  error_checking.rs  evaluate_formula.rs  file_keychain.rs  formula.rs  formula_eval_plan.rs  goal_seek.rs  grouping.rs  hyperlinks.rs  json_view.rs  lib.rs  linked_sheets.rs  locale_commands.rs  logging.rs  main.rs  managed_policy.rs  merge_commands.rs  named_ranges.rs  named_styles_cmd.rs  net_commands.rs  notes.rs  (+16 more)
app/src-tauri/src/bi/: commands.rs  credential_cache.rs  cube.rs  engine_registry.rs  measures.rs  mod.rs  model_editor.rs  script_provider.rs  script_source.rs  types.rs  writeback.rs  writeback_source.rs
app/src-tauri/src/commands/: data.rs  dimensions.rs  mod.rs  nav.rs  print.rs  search.rs  structure.rs  styles.rs  utils.rs
app/src-tauri/src/mcp/: mod.rs  server.rs  tools.rs
app/src-tauri/src/pane_control/: commands.rs  mod.rs  types.rs  values.rs
app/src-tauri/src/pivot/: commands.rs  headless.rs  layout_commands.rs  mod.rs  operations.rs  totals.rs  types.rs  utils.rs
app/src-tauri/src/ribbon_filter/: commands.rs  mod.rs  tests.rs  types.rs
app/src-tauri/src/scripting/: capability_store.rs  commands.rs  mod.rs  notebook_commands.rs  notebook_executor.rs  object_script_commands.rs  template_commands.rs  types.rs  udf.rs
app/src-tauri/src/security/: mod.rs  window_guard.rs
app/src-tauri/src/slicer/: commands.rs  computed.rs  mod.rs  tests.rs  types.rs
app/src-tauri/src/tablix/: commands.rs  mod.rs  operations.rs  types.rs
app/src-tauri/src/timeline_slicer/: commands.rs  mod.rs  types.rs
app/src-tauri/src/utils/: bridge.ts
app/src-tauri/tests/: test_autofilter.rs  test_comments.rs  test_conditional_formatting.rs  test_data_validation.rs  test_dimensions.rs  test_grid_commands.rs  test_grouping.rs  test_hyperlinks.rs  test_named_ranges.rs  test_pivot.rs  test_protection.rs  test_rich_text.rs  test_sheets.rs  test_structure_search_merge.rs  test_styles.rs  test_tables.rs  test_undo_redo.rs
app/src-tauri/tests/common/: mod.rs
core/: Cargo.toml  setup-rust-env.ps1
core/calcula-crypto/: Cargo.toml
core/calcula-crypto/src/: lib.rs
core/calcula-format/: Cargo.toml
core/calcula-format/src/: atomic.rs  cell_ref.rs  error.rs  lib.rs  manifest.rs  sheet_data.rs  sheet_layout.rs  sheet_metadata.rs  sheet_styles.rs  zip_io.rs
core/calcula-format/src/ai/: context_builder.rs  data_sampler.rs  formula_patterns.rs  mod.rs  sheet_summary.rs
core/calcula-format/src/features/: mod.rs  notebooks.rs  object_scripts.rs  pane_control_tests.rs  pane_controls.rs  pivot_layouts.rs  ribbon_filter_tests.rs  ribbon_filters.rs  scripts.rs  slicers.rs  tables.rs
core/calcula-format/src/package/: exporter.rs  manifest.rs  merger.rs  mod.rs  parser.rs
core/calcula-format/src/publish/: linked.rs  manifest.rs  mod.rs  reader.rs  writer.rs
core/calp/: Cargo.toml
core/calp/examples/: publish_report.rs
core/calp/src/: audit.rs  channels.rs  compat.rs  cross_package.rs  data_refresh.rs  dev_mode.rs  error.rs  fold.rs  html_export.rs  identity_provider.rs  integrity.rs  lib.rs  manifest.rs  overrides.rs  package_kind.rs  publish.rs  pull.rs  refresh.rs  registry.rs  signing.rs  skin_pack.rs  transport.rs  version.rs  writeback.rs
core/calp/tests/: lifecycle.rs  writeback_simulation.rs
core/engine/: Cargo.toml
core/engine/benches/: grid_engine.rs
core/engine/src/: ast_alignment.rs  ast_render.rs  cell.rs  control_values.rs  coord.rs  cube.rs  custom_format.rs  date_serial.rs  dependency_extractor.rs  dependency_graph.rs  evaluator.rs  formula_locale.rs  grid.rs  id_operations.rs  identity_graph.rs  lib.rs  locale.rs  lookup_cache.rs  number_format.rs  style.rs  text_cmp.rs  theme.rs  undo.rs
core/engine/src/pivot/: cache.rs  definition.rs  engine.rs  mod.rs  view.rs
core/identity/: Cargo.toml
core/identity/src/: lib.rs  registry.rs  types.rs  uuid_v7.rs
core/parser/: Cargo.toml
core/parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  tests.rs  token.rs
core/persistence/: Cargo.toml
core/persistence/src/: error.rs  lib.rs  xlsx_chart_reader.rs  xlsx_reader.rs  xlsx_style_reader.rs  xlsx_writer.rs
core/pivot-engine/: Cargo.toml
core/pivot-engine/benches/: pivot_calculations.rs
core/pivot-engine/src/: cache.rs  calculated.rs  definition.rs  engine.rs  lib.rs  view.rs
core/script-engine/: Cargo.toml
core/script-engine/src/: display.rs  lib.rs  model_provider.rs  notebook.rs  runtime.rs  types.rs
core/script-engine/src/ops/: application.rs  bookmarks.rs  canonical_model.rs  cells.rs  extended.rs  mod.rs  model.rs  sheets.rs  utility.rs  worksheet_props.rs
core/tablix-engine/: Cargo.toml  DECOMMISSIONED.md
core/tablix-engine/src/: conversion.rs  definition.rs  engine.rs  lib.rs  view.rs
core/target (Konflikt vid selektiv synkning)/debug/.fingerprint/proc-macro2-9dde23bc02ac8082/: output-build-script-build-script-build
core/target (Konflikt vid selektiv synkning)/debug/.fingerprint/quote-e304675f1d982081/: output-build-script-build-script-build
core/target (Konflikt vid selektiv synkning)/debug/.fingerprint/serde-c5e77132195d5c27/: output-build-script-build-script-build
core/target (Konflikt vid selektiv synkning)/debug/.fingerprint/serde_core-b1cb987acaddd391/: output-build-script-build-script-build
(+2616 files in other folders)
