[package]
name = "app"
version = "0.1.0"
description = "Calcula Spreadsheet Application"
authors = ["Daniel"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
engine = { path = "../../core/engine" }
parser = { path = "../../core/parser" }
persistence = { path = "../../core/persistence" }
pivot-engine = { path = "../../core/pivot-engine" }
script-engine = { path = "../../core/script-engine" }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
log = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
regex = "1"
bi-engine = { path = "../../../Calcula Engine Lib/crates/engine" }
tokio = { version = "1", features = ["rt", "macros"] }
arrow = "53"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
