[package]
name = "calcula-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Calcula .cala whole-file encryption container (XChaCha20-Poly1305 + Argon2id)"

[dependencies]
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1.8"
thiserror = "1.0"
