[package]
name = "calp"
version = "0.1.0"
edition = "2021"
description = "Calcula .calp package format — publish, pull, and version management"

[dependencies]
identity = { path = "../identity" }
persistence = { path = "../persistence" }
engine = { path = "../engine" }
calcula-format = { path = "../calcula-format" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
pivot-engine = { path = "../pivot-engine" }
