[package]
name = "calp"
version = "0.1.0"
edition = "2021"
description = "Calcula .calp package format — publish, pull, and version management"

[dependencies]
identity = { path = "../identity" }
persistence = { path = "../persistence" }
engine = { path = "../engine" }
calcula-format = { path = "../calcula-format" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = "3.10"
pivot-engine = { path = "../pivot-engine" }
