[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serde allows our structs to be converted to/from formats like JSON
serde = { version = "1.0", features = ["derive"] }
# Fast non-cryptographic hasher for coordinate-keyed maps (grid cells,
# dependency graph). SipHash's DoS resistance is unnecessary for our own keys.
rustc-hash = "2"
# Parser crate — engine reuses AST types (Expression, BuiltinFunction, etc.)
parser = { path = "../parser" }
# Identity crate — ID types and registry for stable cell/ref identity
identity = { path = "../identity" }

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "grid_engine"
harness = false