[package]
name = "pivot-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
engine = { path = "../engine" }
rustc-hash = "2.1"
smallvec = { version = "1.13", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pivot_calculations"
harness = false
