[package]
name = "script-engine"
version = "0.1.0"
edition = "2021"
description = "TypeScript/JavaScript scripting engine for Calcula using QuickJS"

[dependencies]
engine = { path = "../engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rquickjs = { version = "0.9", features = ["bindgen", "classes", "properties"] }
